fix content width alignment issues

--- a/app/assets/styles/site.css
+++ b/app/assets/styles/site.css
@@ -8,7 +8,6 @@
 .content {
   margin-top: 0.5em;
   margin-left : 12em;
-  margin-right : 2em;
   padding-left: 1em;
   padding-right: 1em;
   -webkit-transition: margin-top 0.3s;
